# rocket-playground

./: .gitignore  .ignore  Cargo.toml  README.md  Rocket.toml
src/: controllers.rs  main.rs  models.rs  routes.rs
