[package]
name = "rocket-playground"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.10"
rocket_contrib = { version = "0.4.10", features = ["json"] }
serde = { version = "1.0.130", features = ["derive"] }

[dev-dependencies]
